# src/api/rainwave_dto.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  rainwave-openapi.json
-#   timestamp: 2026-03-08T14:17:04+00:00
+#   timestamp: 2026-03-08T15:34:53+00:00
 
 from pydantic import BaseModel, Field, RootModel
 from enum import Enum, IntEnum, StrEnum
@@ -376,6 +376,13 @@ class AdminPowerHourSong(BaseModel):
     song_length: int
 
 
+class AlbumArt(RootModel[str | None]):
+    root: str | None = Field(
+        ...,
+        description='Base album art URL for Rainwave. Usage: `art = album_art ? "https://rainwave.cc/${albumArt}_320.jpg" : "https://rainwave.cc/static/images4/noart_1.jpg"`',
+    )
+
+
 class Artist(BaseModel):
     id: int
     name: str
@@ -443,6 +450,15 @@ class RatingUser(RootModel[float | None]):
     root: float | None
 
 
+class RequestAlbum(BaseModel):
+    art: AlbumArt | None
+    id: int
+    name: str
+    rating: float
+    rating_complete: bool
+    rating_user: RatingUser | None
+
+
 class SearchAlbum(BaseModel):
     cool: bool
     fave: bool
@@ -505,13 +521,6 @@ class UserRecentVote(BaseModel):
     rating: float
     rating_user: RatingUser | None
     title: str
-
-
-class AlbumArt(RootModel[str | None]):
-    root: str | None = Field(
-        ...,
-        description='Base album art URL for Rainwave. Usage: `art = album_art ? "https://rainwave.cc/${albumArt}_320.jpg" : "https://rainwave.cc/static/images4/noart_1.jpg"`',
-    )
 
 
 class Relay(BaseModel):
@@ -595,7 +604,7 @@ class Albums(RootModel[list[SearchAlbum]]):
 
 class AllArtistsPaginated(BaseModel):
     data: list[ArtistInList]
-    has_next: bool
+    has_more: bool
     next: int
     progress: int
 
@@ -616,7 +625,7 @@ class AllFaves(RootModel[list[AllFave]]):
 
 class AllGroupsPaginated(BaseModel):
     data: list[SongGroup]
-    has_next: bool
+    has_more: bool
     next: int
     progress: int
 
@@ -858,15 +867,6 @@ class PlaybackHistoryEntry(BaseModel):
     title: str
 
 
-class RequestAlbum(BaseModel):
-    art: AlbumArt | None
-    id: int
-    name: str
-    rating: float
-    rating_complete: bool
-    rating_user: RatingUser | None
-
-
 class RequestLineEntry(BaseModel):
     line_expiry_election: Time | None
     line_expiry_tune_in: Time | None
@@ -896,7 +896,8 @@ class SongInArtist(SongBare, SongBareAlbum):
     sid: StationId
 
 
-class SongOnAlbum(BaseModel):
+class SongOnAlbum(SongBare):
+    artist_parseable: str
     added_on: Time
     cool: bool
     cool_end: Time
@@ -1131,6 +1132,20 @@ class Api4VotePostResponse(BaseModel):
 
 
 class Album(BaseModel):
+    added_on: Time
+    art: AlbumArt | None
+    cool_lowest: Time
+    cool: bool
+    fave_count: int
+    fave: bool
+    id: int
+    name: str
+    played_last: Time
+    rating_count: int
+    rating_user: RatingUser | None
+    rating: float | None
+    song_count: int
+    vote_count: int
     genres: list[SongGroup]
     rating_complete: bool
     rating_histogram: RatingHistogram
@@ -1144,7 +1159,7 @@ class Album(BaseModel):
 
 class AllAlbumsPaginated(BaseModel):
     data: list[AlbumInList]
-    has_next: bool
+    has_more: bool
     next: int
     progress: int
 
