# src/api/rainwave_typeddicts.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  rainwave-openapi.json
-#   timestamp: 2026-03-08T14:17:05+00:00
+#   timestamp: 2026-03-08T15:34:54+00:00
 
 from typing import Any, Literal, NotRequired, TypedDict
 
@@ -229,7 +229,7 @@ type Albums = list[SearchAlbum]
 
 class AllArtistsPaginated(TypedDict):
     data: list[ArtistInList]
-    has_next: bool
+    has_more: bool
     next: int
     progress: int
 
@@ -249,7 +249,7 @@ type AllFaves = list[AllFave]
 
 class AllGroupsPaginated(TypedDict):
     data: list[SongGroup]
-    has_next: bool
+    has_more: bool
     next: int
     progress: int
 
@@ -739,7 +739,8 @@ class SongInArtist(SongBare, SongBareAlbum):
     sid: StationId
 
 
-class SongOnAlbum(TypedDict):
+class SongOnAlbum(SongBare):
+    artist_parseable: str
     added_on: Time
     cool: bool
     cool_end: Time
@@ -772,6 +773,20 @@ class TimelineEntry(TypedDict):
 
 
 class Album(TypedDict):
+    added_on: Time
+    art: AlbumArt
+    cool_lowest: Time
+    cool: bool
+    fave_count: int
+    fave: bool
+    id: int
+    name: str
+    played_last: Time
+    rating_count: int
+    rating_user: RatingUser
+    rating: float | None
+    song_count: int
+    vote_count: int
     genres: list[SongGroup]
     rating_complete: bool
     rating_histogram: RatingHistogram
@@ -785,7 +800,7 @@ class Album(TypedDict):
 
 class AllAlbumsPaginated(TypedDict):
     data: list[AlbumInList]
-    has_next: bool
+    has_more: bool
     next: int
     progress: int
 
